Archetype Engine V2 Updates (#1134)
Fixes #1069
Fixes #1105